# ReachyMini

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  DEPENDENCIES_AND_TOOLS.md  FRONTEND_INTEGRATION_SUMMARY.md  OPERATIONAL_LOGIC.md  PROJECT_ARCHITECTURE.md  PROJECT_COMPLETION_SUMMARY.md  PUSH_FAILURE_ANALYSIS.md  README.md  SECURITY_FIXES.md  backup_project.sh  技术框架与实现方案.md  详细技术实现方案.md
.github/: dependabot.yml
.github/workflows/: security.yml
.trae/rules/: project_rules.md
backend/: RUST_INTEGRATION_SUMMARY.md
backend/python/: alembic.ini  main.py  requirements.txt  run.py  rust_bindings.py  service_manager.py  simple_start.py
backend/python/alembic/versions/: 0161ef85d15a_initial_migration.py
backend/python/api/: ai.py  robot.py  stream.py
backend/python/core/: config.py  database.py  exceptions.py  models.py  websocket_manager.py
backend/python/services/: ai_service.py  robot_service.py  stream_service.py
backend/python/utils/: logger.py
backend/rust/: Cargo.toml
backend/rust/src/: ai.rs  common.rs  config.rs  hardware.rs  lib.rs  python_bindings.rs  realtime.rs  vision.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: HealthCheck.css  HealthCheck.tsx
